correctly aligned nav bar

--- a/robots/style.css
+++ b/robots/style.css
@@ -98,7 +98,7 @@ header nav {}
 	text-decoration:none;
 	margin:0 auto;
 	width:960px;
-	text-align:center;
+	text-align:left;
 }
 #main-menu li{
 	padding-right: 20px;
